tests/sksl/errors/golden/UndefinedFunction.asm.frag
### Compilation failed:

error: 3: function 'int foo(int x)' is not defined
1 error
